# tbi-lens

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/: infer.yaml
scripts/: run_infer.py
tbi_lens/: __init__.py  cli.py  eval.py  infer.py  utils.py
